change wikipedia to home, hide nav, add people facet

--- a/client/client.jade
+++ b/client/client.jade
@@ -40,7 +40,7 @@ head
 
 template(name='layout')
     // +status
-    +nav
+    // +nav
     .ui.bottom.attached.pushable.segment
         // +topbar
         +leftbar
