--- a/parts/wiki/client/wpost.jade
+++ b/parts/wiki/client/wpost.jade
@@ -2,8 +2,9 @@ template(name='wpost_view')
     with current_doc
         .ui.stackable.padded.grid
             .row 
-                .twelve.wide.column
-                    a.ui.icon.button(href="/wikipedia")
+                .sixteen.wide.column
+                    a.ui.icon.button(href="/")
+                        i.chevron.left.icon
                         i.large.wikipedia.icon
                     .ui.inline.header 
                         |#{title}
@@ -38,10 +39,10 @@ template(name='wpost_view')
                     if session_key_value_is 'view_post_section' 'analysis'
                         +watson_view
                     
-                    +comments
-                    +viewing
+                    // +comments
+                    // +viewing
                     .spacer
-                .four.wide.column
+                .sixteen.wide.column
                     // .ui.inline.header 
                     //     small post: 
                     // a.ui.circular.icon.button(href='/')
@@ -50,10 +51,10 @@ template(name='wpost_view')
                     
                     .spacer
                     // div
-                    if url
-                        +link_view key='url' direct=true
-                        +call_watson mode='url'
-                    .ui.inline.small.header #{when}
+                    // if url
+                    //     +link_view key='url' direct=true
+                        // +call_watson mode='url'
+                    // .ui.inline.small.header #{when}
                     // div
                     +array_view key='location_tags' label='location tags' direct=true
                     // div
