add emotion to watson, remove pubs, add categories, bump watson repsonse limit to 30, remove fields,

--- a/client/style.css
+++ b/client/style.css
@@ -469,9 +469,9 @@
 /*  transform: scale(1.1) !important;*/
 /*}*/
 
-/*img, .image {*/
-  /*border-radius:7px !important;*/
-/*}*/
+img, .image {
+  border-radius:7px !important;
+}
 /*a.segment:active {*/
 /*  transform: scale(.97) !important;*/
 /*}*/
