--- a/client/client.jade
+++ b/client/client.jade
@@ -5,7 +5,7 @@ head
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="black")
-    // link(href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet")
     // link(href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet")
     //- script(src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js")
 
