--- a/client/watson.jade
+++ b/client/watson.jade
@@ -248,8 +248,8 @@ template(name='watson_view')
                 +categories
     +entities
     // +semantic_roles
-    +keyword_list
-    +concept_list
+    // +keyword_list
+    // +concept_list
     +keywords
     .ui.hidden.divider
     // +relations
@@ -261,8 +261,6 @@ template(name='watson_view')
     //-         .content
     //-             +jsonView(json=watson)
     
-    
-template(name='watson_full')
     // if view_detail
     // .ui.tiny.grey.inline.header(title='reddit user') 
     //     i.user.outline.icon 
@@ -274,20 +272,23 @@ template(name='watson_full')
         i.grey.cubes.icon(title='categories')
         |categories
         each categories
-            // +tag_picker
+            +flat_tag_picker
+            +tag_picker
             .ui.small.pointer.add_stack_tag.tertiary.button #{this}    
     div 
     if Person 
         i.grey.users.icon
         .ui.inline.small.grey.header people
         each Person 
-            // +tag_picker
+            +flat_tag_picker
+            +tag_picker
             .ui.small.pointer.add_stack_tag.tertiary.button.pick_person #{this}
     div 
     if Company
         i.grey.briefcase.icon(title='company')
         .ui.inline.small.grey.header companies
         each Company 
+            +flat_tag_picker
             // +tag_picker
             .ui.small.pointer.add_stack_tag.tertiary.button.pick_company #{this}
     div 
@@ -295,48 +296,55 @@ template(name='watson_full')
         i.grey.video.icon(title='television show')
         // .ui.inline.small.grey.header television show
         each TelevisionShow 
-            .ui.small.pointer.add_stack_tag.tertiary.button #{this}
+            +flat_tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button #{this}
     div 
     if Broadcaster
         i.grey.video.icon(title='broadcaster')
         // .ui.inline.small.grey.header broadcaster
         each Broadcaster 
-            .ui.small.pointer.add_stack_tag.tertiary.button #{this}
+            +flat_tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button #{this}
     div 
     if Facility
         i.grey.building.icon(title='facility')
         // .ui.inline.small.grey.header facilities
         each Facility 
-            .ui.small.pointer.add_stack_tag.tertiary.button #{this}
+            +flat_tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button #{this}
     div 
     if HealthCondition
         i.grey.heartbeat.icon(title='health condition')
         .ui.inline.small.grey.header health condition
         each HealthCondition 
-            .ui.small.pointer.add_stack_tag.tertiary.button #{this}
+            +flat_tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button #{this}
     div 
     if Organization
         i.grey.users.icon
         // .ui.inline.small.grey.header organizations
         each Organization 
-            .ui.small.pointer.add_stack_tag.tertiary.button #{this}
+            +flat_tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button #{this}
     div 
     if Award
         i.grey.trophy.icon
         each Award 
-            .ui.small.pointer.add_stack_tag.tertiary.button #{this}
+            +flat_tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button #{this}
     div 
     if Location
         i.grey.marker.icon
         // .ui.inline.small.grey.header locations
         each Location 
-            // +flat_tag_picker
-            .ui.small.pointer.add_stack_tag.tertiary.button.pick_location #{this}
+            +flat_tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button.pick_location #{this}
     div 
     if PrintMedia
         i.grey.newspaper.icon(title='print media')
         each PrintMedia 
-            .ui.small.pointer.add_stack_tag.tertiary.button #{this}
+            +flat_tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button #{this}
     div 
     // each tone.result.sentences_tone 
     //     |#{sentence_id}:
