--- a/client/watson.jade
+++ b/client/watson.jade
@@ -273,16 +273,16 @@ template(name='watson_view')
         |categories
         each categories
             +flat_tag_picker
-            +tag_picker
-            .ui.small.pointer.add_stack_tag.tertiary.button #{this}    
+            // +tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button #{this}    
     div 
     if Person 
         i.grey.users.icon
         .ui.inline.small.grey.header people
         each Person 
             +flat_tag_picker
-            +tag_picker
-            .ui.small.pointer.add_stack_tag.tertiary.button.pick_person #{this}
+            // +tag_picker
+            // .ui.small.pointer.add_stack_tag.tertiary.button.pick_person #{this}
     div 
     if Company
         i.grey.briefcase.icon(title='company')
@@ -290,7 +290,7 @@ template(name='watson_view')
         each Company 
             +flat_tag_picker
             // +tag_picker
-            .ui.small.pointer.add_stack_tag.tertiary.button.pick_company #{this}
+            // .ui.small.pointer.add_stack_tag.tertiary.button.pick_company #{this}
     div 
     if TelevisionShow
         i.grey.video.icon(title='television show')
@@ -355,11 +355,11 @@ template(name='watson_view')
     //- .large-text    
     //-     |!{body}
     // .ui.inline.small.grey.header concepts
-    each watson_concepts
-        .ui.tiny.pointer.add_stack_tag.tertiary.button #{this}
+    // each watson_concepts
+    //     .ui.tiny.pointer.add_stack_tag.tertiary.button #{this}
     // .ui.inline.small.grey.header keywords
-    each watson_keywords
-        .ui.tiny.pointer.add_stack_tag.tertiary.button #{this}
+    // each watson_keywords
+    //     .ui.tiny.pointer.add_stack_tag.tertiary.button #{this}
     // |#{ups}
     // i.thumbs.up.outline.icon
     // |#{downs}
