--- a/client/post.jade
+++ b/client/post.jade
@@ -1,26 +1,25 @@
 template(name='post_view')
     with current_doc
-        .ui.stackable.padded.grid
+        .ui.stackable.grid
             .row 
                 .sixteen.wide.column
-                    a.ui.icon.button(href="/")
+                    a.ui.large.circular.icon.basic.button(href="/")
                         i.chevron.left.icon
-                        i.large.wikipedia.icon
                     .ui.inline.header 
                         |#{title}
                     // +session_edit_value_button key='view_post_section' value='stats' label='stats' icon='line-chart'
-                    if tone
-                        +session_edit_value_button key='view_post_section' value='tone' label='tone' icon='tuning-fork'
-                        if session_key_value_is 'view_post_section' 'tone'
-                            +tone
+                    // if tone
+                    //     +session_edit_value_button key='view_post_section' value='tone' label='tone' icon='tuning-fork'
+                    //     if session_key_value_is 'view_post_section' 'tone'
+                    //         +tone
                     // +session_edit_value_button key='view_post_section' value='comments' label='comments' icon='chat'
                     // each tags 
                     //     .ui.compact.large.circular.button.add_tag #{this}
                     // a.image(href="/m/post/#{_id}/view")
                     //     img.ui.image(src=watson.metadata.image class=currentUser.invert_class)    
-                    a.ui.small.header(href=url target='_window') #{url}
+                    // a.ui.small.header(href=url target='_window') #{url}
                     if url
-                        iframe(width='100%' height='900' src=url frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='' class=currentUser.invert_class)
+                        iframe(width='100%' height='100%' src=url frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
                     .f12
                         |!{description}
