--- a/client/post.jade
+++ b/client/post.jade
@@ -4,7 +4,7 @@ template(name='post_view')
             .row 
                 .sixteen.wide.column
                     a.ui.large.circular.icon.basic.button(href="/")
-                        i.chevron.left.icon
+                        i.chevron.left.big.icon
                     .ui.inline.header 
                         |#{title}
                     // +session_edit_value_button key='view_post_section' value='stats' label='stats' icon='line-chart'
@@ -19,7 +19,7 @@ template(name='post_view')
                     //     img.ui.image(src=watson.metadata.image class=currentUser.invert_class)    
                     // a.ui.small.header(href=url target='_window') #{url}
                     if url
-                        iframe(width='100%' height='100%' src=url frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+                        iframe(width='100%' height='1000' src=url frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
                     .f12
                         |!{description}
@@ -35,6 +35,7 @@ template(name='post_view')
                     // +comments
                     // +viewing
                     .spacer
+                    // .ui.divider
                 .sixteen.wide.column
                     // .ui.inline.header 
                     //     small post: 
@@ -42,7 +43,7 @@ template(name='post_view')
                     //     i.yin.yang.large.icon
                     img.ui.rounded.image(src=watson.metadata.image class=currentUser.invert_class)    
                     
-                    .spacer
+                    // .ui.divider
                     // div
                     // if url
                     //     +link_view key='url' direct=true
