20 results, 42 tags, working medscroll class, regular buttons

--- a/client/style.css
+++ b/client/style.css
@@ -734,19 +734,19 @@ input {
     /*padding: 2em;*/
     /*padding-left: 1em;*/
 /*}*/
-/*.medscroll{*/
-    /* padding: 5px !important;
+.medscroll{
+     padding: 5px !important;
     border-radius: 7px !important;
-    border-width: 1px !important;
-    border-color: grey !important;
-    border-style: solid !important; */
-/*    max-height: 500px !important;*/
-/*    overflow-y:scroll;*/
-/*    overflow-x:hidden;*/
-    /* padding-top: .2em; */
-/*    padding: 2em;*/
-    /*padding-left: 1em;*/
-/*}*/
+    /*border-width: 1px !important;*/
+    /*border-color: grey !important;*/
+    /*border-style: solid !important; */
+    max-height: 500px !important;
+    overflow-y:scroll;
+    overflow-x:hidden;
+     padding-top: .2em; 
+    padding: 2em;
+    padding-left: 1em;
+}
 .scrolling{
     max-height: 95vh !important;
     /*min-height: 50vh !important;*/
