--- a/client/group.jade
+++ b/client/group.jade
@@ -31,8 +31,8 @@ template(name='group')
                 if result_tags.count
                     each result_tags
                         +tag_selector
-                else
-                    i.big.grey.loading.yin.yang.icon
+                // else
+                //     i.big.grey.loading.yin.yang.icon
                     
                 i.big.clock.grey.icon(title='when tags')
                 if selected_time_tags
@@ -52,7 +52,7 @@ template(name='group')
                         strong #{name}
                 .ui.hidden.divider
             .sixteen.wide.column
-                .ui.stackable.four.column.centered.grid
+                .ui.stackable.four.column.centered.padded.grid
                     if posts.count
                         each posts
                             .column.medscroll
@@ -86,7 +86,7 @@ template(name='group')
                 
 template(name='tag_selector')
     // a.ui.big.image.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    .ui.compact.circular.tertiary.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.compact.circular.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -95,7 +95,7 @@ template(name='tag_selector')
         //     small #{count}
         
 template(name='unselect_tag')
-    a.unselect_tag.ui.large.active.compact.button(href='#')
+    a.unselect_tag.ui.large.black.compact.button(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -114,12 +114,13 @@ template(name='flat_tag_selector')
         //     small #{count}
 template(name='group_post_view')
     with current_doc
-        .ui.stackable.grid
+        .ui.stackable.padded.grid
             .row 
                 .four.wide.column
                     .ui.segmen
-                        a.ui.large.icon.button(href="/g/#{group}")
+                        a.ui.large.button(href="/g/#{group}")
                             i.chevron.left.icon
+                            |#{group}
                         .ui.large.inline.header #{title}
                         // div
                         // .ui.inline.grey.header {{from_now start_datetime}}
@@ -132,6 +133,7 @@ template(name='group_post_view')
                         // +voting_full
                         +link_view key='link' label='link' direct=true
     
+                        +array_edit key='people_tags' label='people tags' icon='clock' direct=true
                         +array_edit key='time_tags' label='time tags' icon='clock' direct=true
                         +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                 .twelve.wide.column.scrolling
